[package]
name = "memoiz"
version = "0.2.2"
edition = "2024"
description = "A Rust attribute macro for automatic memoization (caching) of function results, optimizing recursive and repetitive computations with thread-safe lazy initialization."
license = "MIT OR Apache-2.0"
repository = "https://github.com/withRiver/memoiz"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["full", "parsing", "visit", "visit-mut"] }